# cgt-tool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  TAX_RULES.md  clippy.toml
.claude/commands/: speckit.analyze.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.codex/prompts/: speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.taskstoissues.md
.gemini/commands/: speckit.specify.toml  speckit.tasks.toml
.github/workflows/: ci.yml  cross-validate.yml  notify-tap.yml  release.yml  test.yml  update-fx-rates.yml
.opencode/command/: openspec-apply.md  openspec-archive.md  openspec-proposal.md  speckit.checklist.md  speckit.plan.md  speckit.tasks.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
crates/cgt/: Cargo.toml
crates/cgt-cli/: Cargo.toml
crates/cgt-cli/src/: commands.rs  main.rs
crates/cgt-cli/tests/: cli_tests.rs
crates/cgt-converter/: Cargo.toml
crates/cgt-converter/src/: error.rs  lib.rs  output.rs  string_enum.rs
crates/cgt-converter/src/schwab/: awards.rs  mod.rs  transactions.rs
crates/cgt-converter/tests/: output_tests.rs  schwab_edge_cases_tests.rs  schwab_integration_tests.rs
crates/cgt-converter/tests/fixtures/schwab/: awards.csv  awards.json  awards_vest.json  transactions_basic.csv  transactions_basic.json  transactions_dividend.csv  transactions_dividend.json  transactions_rsu.csv  transactions_rsu.json
crates/cgt-core/: Cargo.toml
crates/cgt-core/data/: config.toml
crates/cgt-core/src/: calculator.rs  config.rs  dsl.rs  error.rs  exemption.rs  formatting.rs  lib.rs  models.rs  ordering.rs  parser.pest  parser.rs  validation.rs
crates/cgt-core/src/matcher/: acquisition_ledger.rs  bed_and_breakfast.rs  mod.rs  same_day.rs  section104.rs
crates/cgt-core/tests/: config_tests.rs  exemption_tests.rs  lib_tests.rs  matching_tests.rs  parser_tests.rs  validation_tests.rs
crates/cgt-format/: Cargo.toml
crates/cgt-formatter-pdf/: Cargo.toml
crates/cgt-formatter-pdf/fonts/: LICENSE.txt
crates/cgt-formatter-pdf/src/: lib.rs
crates/cgt-formatter-pdf/src/templates/: report.typ
crates/cgt-formatter-pdf/tests/: lib_tests.rs
crates/cgt-formatter-plain/: Cargo.toml
crates/cgt-fx/: Cargo.toml
crates/cgt-mcp/: Cargo.toml
crates/cgt-mcp/src/: error.rs  lib.rs  resources.rs  server.rs
crates/cgt-money/: Cargo.toml
crates/cgt-money/src/: amount.rs  cache.rs  lib.rs  parser.rs
crates/cgt-money/tests/: fallback_tests.rs  parser_cache_tests.rs
crates/cgt-pdf/: Cargo.toml
crates/cgt-wasm/: Cargo.toml  README.md  package.json
crates/cgt-wasm/src/: lib.rs  utils.rs
crates/cgt-wasm/tests/: wasm.rs
crates/cgt/data/: config.toml
crates/cgt/examples/: report.rs
crates/cgt/src/: config.rs  error.rs  lib.rs  model.rs  report.rs  validate.rs
crates/cgt/src/dsl/: mod.rs  parse.rs  serialize.rs
crates/cgt/src/engine/: fixture_tests.rs  fixture_value_tests.rs  mod.rs  normalize.rs  plan.rs  report.rs  value.rs
crates/cgt/src/format/: mod.rs  plain.rs
crates/cgt/src/money/: amount.rs  cache.rs  loader.rs  mod.rs  parser.rs  types.rs
crates/cgt/tests/: config.rs  dsl.rs  dsl_roundtrip.rs  exemptions.rs  money_fallback.rs  money_parser_cache.rs  plain_render.rs  validation.rs
docs/: architecture.md  release.md  spec.md  tax-rules.md
examples/wasm-demo/: README.md  app.js  index.html  pkg  styles.css
openspec/: AGENTS.md  config.yaml  project.md
scripts/: .gitignore  cgt_parse.py  convert-to-cgtcalc.py  convert-to-raw.py  convert_cgtcalc_inputs.py  cross-validate.py  download-fx-rates.sh  download_fx_rates.py  equivalence.py  regenerate_test_outputs.py  reverse_cgt_files.py  update_cgt_syntax.py
specs/001-cgt-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-cases.json
specs/002-dsl-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-strict-clippy-linting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-test-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-internal-data-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-multi-ticker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-plain-formatter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-pdf-typst-formatter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-codebase-refactoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-better-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-multi-currency/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/data/: 2024_2025_SpecialYear.cgt  2024_2025_SpecialYear.json  AssetEventsNotFullSale.cgt  AssetEventsNotFullSale.json  AssetEventsNotFullSale2.cgt  AssetEventsNotFullSale2.json  Blank.cgt  Blank.json  BuySellAllBuyAgainCapitalReturn.cgt  BuySellAllBuyAgainCapitalReturn.json  CarryLoss.cgt  CarryLoss.json  GainsAndLosses.cgt  GainsAndLosses.json  HMRCExample1.cgt  HMRCExample1.json  MultiTickerSameDay.cgt  MultiTickerSplit.cgt  MultipleMatches.cgt  MultipleMatches.json  SameDayMerge.cgt  SameDayMergeInterleaved.cgt  SameDayMergeInterleaved.json  Simple.cgt  Simple.json  SimpleTwoSameDay.cgt  SimpleTwoSameDay.json  WithAssetEvents.cgt  WithAssetEvents.json  WithAssetEventsBB.cgt  WithAssetEventsBB.json  WithAssetEventsMultipleYears.cgt  WithAssetEventsMultipleYears.json  WithAssetEventsSameDay.cgt  WithAssetEventsSameDay.json  WithSplitBB.cgt  WithSplitBB.json  WithSplitS104.cgt  WithSplitS104.json  WithUnsplitBB.cgt  (+5 more)
tests/inputs/: 2024_2025_SpecialYear.cgt  AccumulationDividend.cgt  AssetEventsNotFullSale.cgt  (+44 more)
web/: README.md  app.js  pkg
(+370 files in other folders)
