[workspace]
members = ["crates/cgt-cli", "crates/cgt-converter", "crates/cgt-wasm", "crates/cgt", "crates/cgt-pdf"]
resolver = "2"

[workspace.package]
version = "0.15.1"
edition = "2024"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Allow large error types (common with parser libraries like pest_consume)
result_large_err = "allow"
