[package]
name = "cgt-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
cgt-core = { path = "../cgt-core" }
cgt-formatter-plain = { path = "../cgt-formatter-plain" }
cgt-formatter-pdf = { path = "../cgt-formatter-pdf" }
cgt-money = { path = "../cgt-money" }
cgt-converter = { path = "../cgt-converter" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
