[package]
name = "cgt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cgt-tool"
path = "src/main.rs"

[dependencies]
cgt = { path = "../cgt" }
cgt-pdf = { path = "../cgt-pdf" }
cgt-converter = { path = "../cgt-converter" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
