[package]
name = "cgt-converter"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[lints]
workspace = true

[dev-dependencies]
rust_decimal_macros = "1.33"
