[package]
name = "cgt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde_json = "1.0"
schemars = { version = "0.8", features = ["rust_decimal", "chrono"] }
toml = "0.8"
cgt-money = { path = "../cgt-money" }

[lints]
workspace = true

[dev-dependencies]
rust_decimal_macros = "1.39"
