[package]
name = "cgt-core"
version.workspace = true
edition.workspace = true

[dependencies]
pest = "2.7"
pest_derive = "2.7"
pest_consume = "1.1"
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
serde_json = "1.0"
schemars = { version = "0.8", features = ["rust_decimal", "chrono"] }
toml = "0.8"
cgt-money = { path = "../cgt-money" }

[lints]
workspace = true

[dev-dependencies]
rust_decimal_macros = "1.39"
