[package]
name = "cgt-formatter-pdf"
version.workspace = true
edition.workspace = true

[dependencies]
cgt-core = { path = "../cgt-core" }
cgt-format = { path = "../cgt-format" }
rust_decimal = "1"
chrono = "0.4"
typst = "0.14"
typst-as-lib = "0.15"
typst-pdf = "0.14"
thiserror = "1.0"

[lints]
workspace = true
