[package]
name = "cgt-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
cgt-core = { path = "../cgt-core" }
cgt-money = { path = "../cgt-money" }
rmcp = { version = "0.11", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = "0.4"
rust_decimal = "1"
schemars = "0.8"

[lints]
workspace = true
