[package]
name = "cgt-money"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
include_dir = "0.7"
iso_currency = "0.5"
quick-xml = { version = "0.36", features = ["serialize"] }
rust_decimal = { version = "1", default-features = false, features = ["serde", "std"] }
schemars = { version = "0.8", features = ["rust_decimal"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
