[package]
name = "cgt"
version.workspace = true
edition.workspace = true

[dependencies]
pest = "2.7"
pest_derive = "2.7"
pest_consume = "1.1"
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
schemars = { version = "0.8", features = ["rust_decimal", "chrono"] }
toml = "0.8"
include_dir = "0.7"
iso_currency = "0.5"
quick-xml = { version = "0.36", features = ["serialize"] }

[lints]
workspace = true

[dev-dependencies]
rust_decimal_macros = "1.39"
